<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ambient Alarm Clock</string><!-- "clock"-->
    <string name="app_id">794B7BBF</string>
    <string name="namespace">de.lukeslog.alarmclock</string>
    <string name="app_name_short">Ambient Alarm Clock</string>
    <string name="alarm">Alarm</string><!-- "clock"-->
    <string name="snooze">Snooze</string><!-- "five more minutes mom" -->
    <string name="awake">OK. I am up!</string><!-- "ok I'm awake"-->
    <string name="save">Save</string><!-- the word for "save" or "store"-->
    <string name="radio">Radio</string><!-- the word for "radio"-->
    <string name="sound">Sound</string>
	<string name="settings">Settings</string><!-- SettingsActivity -->
	<string name="setalarmtime">Set alarm time</string>
	<string name="useownring">Use Own Song</string>
	<string name="activated">Activated</string>
    <string name="choosefolder">Choose a Folder</string>
    <string name="chooselocalfolder">Choose a Folder</string>
    <string name="deletealarm">Delete Alarm?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="howlongshallyourcountdowngo">How long shall your countdown go...</string>
    <string name="deleteaction">Do you want to delete this action?</string>
    <string name="ezcontrolip">IP Of your ezControl</string>
    <string name="numberoftheplug">Number of the Plug</string>
    <string name="turnonorof">Turn On or Off on alarm</string>
    <string name="source">Select Source</string>
    <string name="radioselect">Select Radio Station</string>
    <string name="off">Turn Off</string>
    <string name="numberoftheheater">Number of your radiator</string>
    <string name="turntolevel">Turn to Level</string>
    <string name="fadehuein">Fade In</string>
    <string name="fadein">Fade In</string>
    <string name="before">before</string>
    <string name="after">after</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="switchToRadio">Switch To Radio</string>
    <string name="pickdevice">Pick Device</string>
    <string name="actionname">Name of the Action</string>
    <string name="joinsnooze">Join Snoozing</string>
    <string name="alarmdot"> alarm.</string>
    <string name="turnofattheend">Turn alarm off at the end</string>
    <string name="provideurl">Please provide URL</string>
    <string name="addnewalarm">Add New Alarm</string>
    <string name="lockonalarm">Lock near Alarm</string>
    <string name="days">Days</string>
    <string name="actions">Actions</string>
    <string name="addactions">Add Action</string>
    <string name="noactionsdoesnothing">You have not added any actions. This alarm will not do anything.</string>
    <string name="test">Test</string>
    <string name="mustbemp3">All files have to be .mp3 files!</string>
    <string name="uselocalfilesystem">Use Local File System</string>
    <string name="foldername">Folder Name</string>
    <string name="usedropbox">Use DropBox</string>
    <string name="sendmailto">Send Mail To:</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="bluec">Blue: </string>
    <string name="greenc">Green: </string>
    <string name="redc">Red: </string>
    <string name="definecolor">Define Color</string>
    <string name="connecttohue">Connect To Hue</string>
    <string name="thirtyhue">Press the button on your Hue bridge in the next 30 seconds to grant access.</string>
    <string name="findhue">Find Hue</string>
    <string name="searchfordevices">Search For Devices</string>
    <string name="displayoptions">Display Options</string>
    <string name="sources">Sources</string>
    <string name="snoozetime">Snooze Time (Min)</string>
    <string name="pleaseprovidedatainsettings">Please provide log-in data in the settings</string>
    <!-- preferences strings-->
    <string name="pref_email_title">Email Settings</string>
    <string name="email_logdata">Email Data</string>
    <string name="pref_email_summary">Configure your email account</string>
    <string name="pref_summary_email_user"></string>
    <string name="pref_email_user">Email User</string>
    <string name="pref_summary_email_password"></string>
    <string name="pref_email_pasword">Password</string>
    <string name="pref_summary_email_smtpserver">Your SMTP server address</string>
    <string name="pref_email_smtpserver">SMTP Server</string>
    <string name="pref_summary_email_smtpserver_port">Your Server Port</string>
    <string name="pref_email_smtpserver_port">Port</string>
    <string name="pref_lastfm_title">Last.fm</string>
    <string name="pref_lastfm_summary">Configure your last.fm account</string>
    <string name="pref_lastfm_logdata">Last.fm Data</string>
    <string name="pref_lastfm_user">Username</string>
    <string name="pref_summary_lastfm_user"></string>
    <string name="pref_summary_lastfm_password"></string>
    <string name="pref_lastfm_password">Password</string>
    <string name="pref_developers_title">Developers</string>
    <string name="pref_logging">Logging</string>
    <string name="pref_logging_summary">Activates DDMS-logging</string>
    <string name="pref_logging_file">Write to logfile</string>
    <string name="be_advised_short">Be advised that this application stores your account data.</string>
    <string name="be_advised_google_mail">Be advised that this application stores your account data.\n\nPlease use an application specific password.\nGoogle Mail allows for 2-factor authentication and account specific passwords. Find out more under http://www.google.com/landing/2step/\n</string>
</resources>