<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_email_title"
        android:key="pref_email_title">
        <PreferenceScreen
            android:key="pref_email_detail_settings"
            android:title="@string/email_logdata"
            android:summary="Configure your email account."
            android:persistent="true">
            <Preference
                android:key="pref_static_field_key"
                android:selectable="false"
                android:summary="Be advised that this application stores your account data.\n\nPlease use an application specific password.\nGoogle Mail allows for 2-factor authentication and account specific passwords. Find out more under http://www.google.com/landing/2step/\n"/>
            <EditTextPreference
                android:key="pref_email_login"
                android:summary="@string/pref_summary_email_user"
                android:title="@string/pref_email_user"/>
            <EditTextPreference
                android:key="pref_email_pasword"
                android:summary="@string/pref_summary_email_password"
                android:title="@string/pref_email_pasword"
                android:inputType="textPassword"/>
            <EditTextPreference
                android:key="pref_email_server"
                android:summary="@string/pref_summary_email_smtpserver"
                android:title="@string/pref_email_smtpserver"
                android:defaultValue="smtp.gmail.com"/>
            <EditTextPreference
                android:key="pref_email_server_port"
                android:summary="@string/pref_summary_email_smtpserver_port"
                android:title="@string/pref_email_smtpserver_port"
                android:defaultValue="465"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_lastfm_title"
        android:key="pref_lastfm_title">
        <PreferenceScreen
            android:key="pref_lastfm_detail_settings"
            android:title="@string/pref_lastfm_logdata"
            android:persistent="true">
            <Preference
                android:key="pref_static_field_key"
                android:selectable="false"
                android:summary="Be advised that this application stores your account data."/>
            <EditTextPreference
                android:key="pref_lastfm_login"
                android:summary="@string/pref_summary_lastfm_user"
                android:title="@string/pref_lastfm_user"/>
            <EditTextPreference
                android:key="pref_lastfm_pasword"
                android:summary="@string/pref_summary_lastfm_password"
                android:title="@string/pref_lastfm_password"
                android:inputType="textPassword"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_developers_title"
        android:key="pref_developers_title">
        <CheckBoxPreference
            android:title="@string/pref_logging"
            android:key="pref_looging"
            android:summary="@string/pref_logging_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:title="@string/pref_logging_file"
            android:key="pref_looging_file"
            android:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>