<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fadein"
        android:id="@+id/fade"
        android:checked="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/radioselect"
        android:background="#FFD800"
        android:textColor="#000"
        android:id="@+id/radioselect"/>

    <Spinner
        android:id="@+id/spinnerradio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/radioselect" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:id="@+id/testradio"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/source"
        android:background="#FFD800"
        android:textColor="#000"
        android:id="@+id/textView"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mustbemp3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/use_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uselocalfilesystem" />

    <TextView
        android:id="@+id/textView634231"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foldername"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/localfolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Spinner
        android:id="@+id/spinnerlocalf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/chooselocalfolder" />

    <CheckBox
        android:id="@+id/use_dropbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usedropbox" />

    <TextView
        android:id="@+id/textView4534"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foldername"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/dropboxfolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Spinner
        android:id="@+id/spinnerdpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choosefolder" />


</LinearLayout>