<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="#FFD800"
        android:textColor="#000"
        android:text="Ambient Alarm"
        android:id="@+id/ambientalarmswitch"
        android:checked="false"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TimePicker
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/ambientalarmtimepicker"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/textView2"
                android:layout_weight="0.38"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Snooze"
                android:id="@+id/snoozing"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="SnoozeTime (Min)"
                android:id="@+id/textView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/snoozetimeinseconds"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lockonalarm"
                android:id="@+id/lockcheck"
                android:checked="false"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainlayout">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#FFD800"
            android:textColor="#000"
            android:text="@string/days"
            android:id="@+id/daysheader"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/monday"
                android:src="@drawable/mo"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/tuesday"
                android:src="@drawable/tu"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/wednesday"
                android:src="@drawable/we"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/thursday"
                android:src="@drawable/th"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/friday"
                android:src="@drawable/fr"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/saturday"
                android:src="@drawable/sa"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/sunday"
                android:src="@drawable/su"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/actions"
            android:background="#FFD800"
            android:textColor="#000"
            android:id="@+id/actionsheader"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/addnew_layout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/addactionimage"
                android:src="@drawable/addnewalarm2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/addactions"
                android:id="@+id/addactiontext"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fillViewport="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:id="@+id/actionlist"
                android:layout_height="match_parent">
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>